--- a/directive/expression.html
+++ b/directive/expression.html
@@ -25,7 +25,7 @@
         <div class="margin">3. “$node”，对象类型。指向当前指令的<a href="directive/introduction">宿主元素</a>对象。</div>
         <div class="margin">4. “$event”，对象类型。$event参数只在<a href="directive/eventHandler">事件处理指令</a>表达式中生效，指向当前被触发的事件对象。</div>
         参考如下示例：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] directive expression callback parameters" src="https://codepen.io/dagger8224/embed/wvmvBeX?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] directive expression callback parameters" src="https://codepen.io/dagger8224/embed/wvmvBeX?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/wvmvBeX">
           [dagger-demo] directive expression callback parameters</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
