--- a/directive/loading.html
+++ b/directive/loading.html
@@ -17,7 +17,7 @@
     </div>
     <h3 class="question">+loading指令的预定义修饰符</h3>
     <div class="answer">“+loading”指令支持布尔类型的预定义指令修饰符root，root为true代表当前指令创建的自定义作用域直接继承自<a href="directive/scope">根作用域</a>而非其父级作用域。我们来看一个例子：
-      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +loading (root directive)" src="https://codepen.io/dagger8224/embed/NWYWGWR?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +loading (root directive)" src="https://codepen.io/dagger8224/embed/NWYWGWR?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/dagger8224/pen/NWYWGWR">
         [dagger-demo] +loading (root directive)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
         on <a href="https://codepen.io">CodePen</a>.
