--- a/directive/eventHandler.html
+++ b/directive/eventHandler.html
@@ -16,7 +16,7 @@
         </iframe>
       </div>
       <div>您也可以在其他字符串前添加“+”前缀构造一个<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/CustomEvent/CustomEvent">自定义事件</a>。在dagger.js中，您可以使用自定义事件进行作用域之间的数据通信。我们来看示例：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] communication between isolate $scope" src="https://codepen.io/dagger8224/embed/YzedbwQ?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] communication between isolate $scope" src="https://codepen.io/dagger8224/embed/YzedbwQ?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/YzedbwQ">
           [dagger-demo] communication between isolate $scope</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
