--- a/directive/html.html
+++ b/directive/html.html
@@ -9,7 +9,7 @@
       <div>您同样可以在这些动态创建出的元素上声明各种指令，这些指令表达式中的作用域对象默认指向$html宿主元素的作用域。</div>
       <div>如果有需要，您也可以在动态元素上继续声明$html指令来创建新的动态节点。</div>
       我们来看一个示例：
-      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $html directive" src="https://codepen.io/dagger8224/embed/vYdZKgx?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $html directive" src="https://codepen.io/dagger8224/embed/vYdZKgx?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/dagger8224/pen/vYdZKgx">
         [dagger-demo] $html directive</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
         on <a href="https://codepen.io">CodePen</a>.
