--- a/directive/lifeCycle.html
+++ b/directive/lifeCycle.html
@@ -73,9 +73,9 @@
         <div class="margin">在创建阶段，“+loading”指令首先执行，“+loaded”指令在“+loading”指令得到执行结果且宿主元素挂载到DOM树上之后执行。请注意，如果“+loading”指令表达式的返回值是一个Promise，那么“+loaded”将在这个Promise对象处于已兑现（fulfilled）状态之后执行。</div>
         <div class="margin">在销毁阶段，“+unloading”指令首先执行，“+unloaded”指令在“+unloading”指令执行完成且宿主元素从DOM树上移除之后执行。“+unloading”和“+unloaded”指令都是作为同步函数执行的。</div>
         我们来看一个示例：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] lifecycle directives (parent &amp; child)" src="https://codepen.io/dagger8224/embed/MWVWwVJ?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] lifecycle directives" src="https://codepen.io/dagger8224/embed/MWVWwVJ?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/MWVWwVJ">
-          [dagger-demo] lifecycle directives (parent &amp; child)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          [dagger-demo] lifecycle directives</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
         <div>为了方便演示，示例中使用了目前尚未讲解到的<a target="directive/controller">控制指令“<a target="directive/exist">$exist</a>”和<a target="directive/eventHandler">事件处理指令</a>“+click”。目前您只要知道这两个指令在本例中用于切换$exist指令宿主元素的存在状态就可以了，这些指令的具体用法将在后续章节中讲解。</div>
@@ -84,7 +84,7 @@
         <div class="margin">在创建阶段，父级元素的“+loading”指令得到执行结果后子级的“+loading”指令才会触发执行。</div>
         <div class="margin">在销毁阶段，父级元素的“+unloading”指令执行完成后再依次执行子级元素的“+unloading”和“+unloaded”指令，最后执行父级元素的“+unloaded”指令。</div>
         我们来看一个示例：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] the execute order of life-cycle directives" src="https://codepen.io/dagger8224/embed/YzeGqbJ?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] the execute order of life-cycle directives" src="https://codepen.io/dagger8224/embed/YzeGqbJ?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/YzeGqbJ">
           [dagger-demo] the execute order of life-cycle directives</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
