--- a/module/template.html
+++ b/module/template.html
@@ -3,24 +3,68 @@
   <template $exist="language == 'zh-cn'">
     <h3 class="question">什么是模板模块</h3>
     <div class="answer">
-      <div>模板是可复用的html片段。</div>
-      <div>在页面中使用模板非常简单，您只要像创建普通元素标签那样，把模板路径写在尖括号内就可以了。标签名为模板路径的元素称为模板元素。</div>
-      <div>不支持在指令表达式中通过“$module”变量访问模板模块。</div>
-      <div>模板元素上<a href="directive/scope">作用域</a>的工作方式与实体宿主元素一致。我们来看例子：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/LYQBxGp?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See the Pen <a href="https://codepen.io/dagger8224/pen/LYQBxGp">
+      <div>模板是可复用的html片段。合法的模板模块名称可以包含大小写字母，数字，“-”和“_”，首字符必须是小写字母。</div>
+      <div>模板模块由框架本身维护，不支持在指令表达式中通过“$module”变量访问模板内容。</div>
+    </div>
+    <h3 class="question">如何使用模板</h3>
+    <div class="answer">
+      在页面中使用模板非常简单，您只要像创建普通html元素标签那样，将模板路径写在尖括号内就可以了（需要完整指定开闭标签）。我们来看示例：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (static)"
+        src="https://codepen.io/dagger8224/embed/JjLYvxQ?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy"
+        allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/JjLYvxQ">
+          [dagger-demo] template module (static)</a> by Tony Peakman (<a
+          href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+      请注意，不要使用与<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element">原生html元素</a>相同的名称来命名模板模块，这将导致模板模块无法访问（标签名被识别为原生html元素而非模板模块）。一个规避模块和原生元素命名冲突的通用方案是使用由下划线连接的多个单词作为模块名称。我们来看例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (invalid module name)"
+        src="https://codepen.io/dagger8224/embed/abYvGeg?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy"
+        allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/abYvGeg">
+          [dagger-demo] template module (invalid module name)</a> by Tony Peakman (<a
+          href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+      模板的另一种常见使用场景是与“<a href="directve/html">$html</a>”指令配合使用，实现页面视图内容的动态加载。我们来看例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (static)"
+        src="https://codepen.io/dagger8224/embed/OJvyZJP?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy"
+        allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/OJvyZJP">
+          [dagger-demo] template module (static)</a> by Tony Peakman (<a
+          href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+      您可以嵌套使用模板，前提是它们位于同一<a href="module/namespace">名空间</a>下。我们来看例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (invalid module name)" src="https://codepen.io/dagger8224/embed/ExEVGNR?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/ExEVGNR">
+        [dagger-demo] template module (invalid module name)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+      在<a href="module/namespace">名空间</a>章节中我们将讲解模板模块更加复杂的使用方式。
+    </div>
+    <h3 class="question">在模板元素上使用指令</h3>
+    <div class="answer">
+      您可以在模板元素上声明<a href="directive/lifeCycle">生命周期指令</a>和<a href="directive/controller">控制指令</a>（除<a
+        href="directive/html">$html</a>、<a href="directive/text">$text</a>、<a href="directive/class">$class</a>和<a
+        href="directive/style">$style</a>之外），但不能使用<a href="directive/controller">事件处理指令</a>（除非使用“target”<a
+        href="directive/decorator">指令修饰符</a>指定其他的实体DOM元素作为事件监听器的目标）。我们来看例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled"
+        src="https://codepen.io/dagger8224/embed/LYQBxGp?default-tab=html%2Cresult&editable=true&theme-id=dark"
+        frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/LYQBxGp">
           Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-          on <a href="https://codepen.io">CodePen</a>.
-        </iframe>
-      </div>
-      <div>在模板元素上您可以声明<a href="directive/lifeCycle">生命周期指令</a>和<a href="directive/controller">控制指令</a>（除<a href="directive/html">$html</a>、<a href="directive/text">$text</a>、<a href="directive/class">$class</a>和<a href="directive/style">$style</a>之外），但不能使用<a href="directive/controller">事件处理指令</a>（除非使用“target”<a href="directive/decorator">指令修饰符</a>指定其他的实体元素作为事件监听器的目标元素）。</div>
-      <div>您可以在模板模块内部通过指令来创建动态内容。我们来看例子：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (dynamic content)" src="https://codepen.io/dagger8224/embed/qBxyRQR?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See the Pen <a href="https://codepen.io/dagger8224/pen/qBxyRQR">
-          [dagger-demo] template module (dynamic content)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-          on <a href="https://codepen.io">CodePen</a>.
-        </iframe>
-      </div>
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+      您可以在模板模块内部通过指令来创建动态内容。我们来看例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (dynamic content)"
+        src="https://codepen.io/dagger8224/embed/qBxyRQR?default-tab=html%2Cresult&editable=true&theme-id=dark"
+        frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/qBxyRQR">
+          [dagger-demo] template module (dynamic content)</a> by Tony Peakman (<a
+          href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
     </div>
     <h3 class="question">模板模块的配置项值</h3>
     <div class="answer">除模块的通用配置项字段外，模板模块还支持“style”字段（字符串或者字符串数组），用于指定在当前模板上生效的<a href="module/style">样式模块</a>名称。我们来看例子：
