--- a/module/template.html
+++ b/module/template.html
@@ -18,12 +18,9 @@
         on <a href="https://codepen.io">CodePen</a>.
       </iframe>
       请注意，不要使用与<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element">原生html元素</a>相同的名称来命名模板模块，这将导致模板模块无法访问（标签名被识别为原生html元素而非模板模块）。一个规避模块和原生元素命名冲突的通用方案是使用由下划线连接的多个单词作为模块名称。我们来看例子：
-      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (invalid module name)"
-        src="https://codepen.io/dagger8224/embed/abYvGeg?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy"
-        allowtransparency="true" allowfullscreen="true">
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (invalid module name)" src="https://codepen.io/dagger8224/embed/abYvGeg?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/dagger8224/pen/abYvGeg">
-          [dagger-demo] template module (invalid module name)</a> by Tony Peakman (<a
-          href="https://codepen.io/dagger8224">@dagger8224</a>)
+        [dagger-demo] template module (invalid module name)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
         on <a href="https://codepen.io">CodePen</a>.
       </iframe>
       模板的另一种常见使用场景是与“<a href="directve/html">$html</a>”指令配合使用，实现页面视图内容的动态加载。我们来看例子：
