--- a/module/style.html
+++ b/module/style.html
@@ -3,16 +3,17 @@
   <template $exist="language == 'zh-cn'">
     <h3 class="question">什么是样式模块</h3>
     <div class="answer">
-      <div>样式模块是一组可复用的样式片段。</div>
+      <div>样式模块是一组可复用的样式片段。样式模块的名称中不能包含符号“$”。</div>
       <div>样式模块由框架本身维护，不支持在指令表达式中通过“$module”变量进行访问。</div>
     </div>
     <h3 class="question">样式模块的配置项字段</h3>
-    <div class="answer">除模块的通用配置项字段外，样式模块还支持布尔类型的“scoped”字段，“scoped”为true（默认值）代表此样式模块仅对其关联<a href="module/template">模板模块</a>的内容生效，否则样式模块将在当前应用程序内全局生效。我们来看例子：
+    <div class="answer">除模块的通用配置项字段外，样式模块还支持布尔类型的“scoped”字段。“scoped”为true（默认值）代表此样式模块仅对其关联<a href="module/template">模板模块</a>的内容生效，否则样式模块将在当前应用程序页面内全局生效。我们来看例子：
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] template module (scoped css)" src="https://codepen.io/dagger8224/embed/vYdaxJz?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/dagger8224/pen/vYdaxJz">
         [dagger-demo] template module (scoped css)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
         on <a href="https://codepen.io">CodePen</a>.
       </iframe>
+      上例中，<a href="module/template">模板模块</a>“view_module”关联了两个样式模块“style1”和“style2”，其中“style1”中的按钮文字颜色声明是全局生效的，而“style2”中的边框样式声明仅对“view_module”内部的按钮元素生效。
     </div>
   </template>
   <template $exist="language == 'en-us'">
