--- a/module/introduction.html
+++ b/module/introduction.html
@@ -217,7 +217,7 @@
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
       </div>
-      <div class="margin">4. “prefetch”，字符串类型。主要用于在不阻塞当前<a href='router/introduction'>路由场景</a>视图渲染的前提下提前加载耗时较长的模块资源内容。框架在解析时将“prefetch”内容转换为正则表达式与当前的hash path匹配，预加载模块将只阻塞满足匹配条件的路由场景视图渲染。我们将在路由章节演示相关示例。</div>
+      <div class="margin">4. “prefetch”，字符串类型。主要用于在不阻塞当前<a href='router/introduction'>路由场景</a>视图渲染的前提下提前加载耗时较长的模块资源内容。框架在解析时将“prefetch”内容转换为正则表达式与当前的hash path匹配，预加载模块将只阻塞满足匹配条件的路由场景视图渲染。我们将在<a href='router/introduction'>路由</a>章节中演示相关示例。</div>
     </div>
   </div>
   </template>
