--- a/module/template.html
+++ b/module/template.html
@@ -3,7 +3,9 @@
   <template $exist="language == 'zh-cn'">
     <h3 class="question">什么是模板模块</h3>
     <div class="answer">
-      <div>模板是可复用的html片段。合法的模板模块名称可以包含大小写字母，数字，“-”和“_”，首字符必须是小写字母。</div>
+      <div>模板是可复用的html片段。</div>
+      <div>模板模块配置项的“type”值为“template”。</div>
+      <div>合法的模板模块名称可以包含大小写字母，数字，“-”和“_”，首字符必须是小写字母。</div>
       <div>模板模块由框架本身维护，不支持在指令表达式中通过“$module”变量访问模板内容。</div>
     </div>
     <h3 class="question">如何使用模板</h3>
