--- a/module/string.html
+++ b/module/string.html
@@ -3,7 +3,9 @@
   <template $exist="language == 'zh-cn'">
     <h3 class="question">什么是字符串模块</h3>
     <div class="answer">
-      <div>字符串模块是可复用的字符串资源。您可以在指令表达式中通过“$module”变量访问字符串模块的内容。</div>
+      <div>字符串模块是可复用的字符串资源。</div>
+      <div>字符串模块配置项的“type”值为“string”。</div>
+      <div>您可以在指令表达式中通过“$module”变量访问字符串模块的内容。</div>
       <div>我们来看例子：
         <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] string module" src="https://codepen.io/dagger8224/embed/vYdaZwp?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/vYdaZwp">
