--- a/module/style.html
+++ b/module/style.html
@@ -3,7 +3,9 @@
   <template $exist="language == 'zh-cn'">
     <h3 class="question">什么是样式模块</h3>
     <div class="answer">
-      <div>样式模块是一组可复用的样式片段。样式模块的名称中不能包含符号“$”。</div>
+      <div>样式模块是一组可复用的样式片段。</div>
+      <div>样式模块配置项的“type”值为“style”。</div>
+      <div>样式模块的名称中不能包含符号“$”。</div>
       <div>样式模块由框架本身维护，不支持在指令表达式中通过“$module”变量进行访问。</div>
     </div>
     <h3 class="question">样式模块的配置项字段</h3>
